# Pascal-Compiler

./: .gitignore  CMakeLists.txt  Pascal-llvm.sln  Pascal-llvm.vcxproj  Pascal-llvm.vcxproj.filters  README.md  main.cpp  output.ll  syntax.md
doc/: syntax.md
include/: Lexer.h  Reduce.h  Serialize.h  SyntaxEntry.h  SyntaxLl.h  SyntaxLr.h  Token.h  cmd.h  u.h
include/lex/: Lexer.h  Token.h
include/pass/: RmTerminatorPass.h
include/semantic/: Ast.h  Exp.h  ExpIR.h  FuncDef.h  FuncIR.h  Reduce.h  SymbolTable.h  TypeIR.h  VarDef.h  VarIR.h  funcDef.h
include/syntax/: Ast.h  Serialize.h  SyntaxCheck.h  SyntaxEntry.h  SyntaxLl.h  SyntaxLr.h
misc/link_set/: add.pas  main.pas
misc/open_set/: 00_main.pas  54_long_array.pas
output/: output.ll
src/: Lex.cpp  Lexer.cpp  Serialize.cpp  SyntaxEntry.cpp  SyntaxLl.cpp  SyntaxLr.cpp  Token.cpp  cmd.cpp  main.cpp
src/lex/: Lex.cpp  Lexer.cpp  Token.cpp
src/pass/: RmTerminatorPass.cpp
src/semantic/: Ast.cpp  Exp.cpp  ExpIR.cpp  FuncDef.cpp  FuncIR.cpp  Reduce.cpp  SymbolTable.cpp  TypeIR.cpp  VarDef.cpp  VarIR.cpp  funcDef.cpp
src/syntax/: Ast.cpp  Serialize.cpp  SyntaxCheck.cpp  SyntaxEntry.cpp  SyntaxLl.cpp  SyntaxLr.cpp
